--- a/biodetail.html
+++ b/biodetail.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <title>Team Bio</title>
+    <title>Bio detail</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/teambio.css" />
+    <link rel="stylesheet" href="css/storypost2.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -19,7 +19,7 @@
 
 <!--the menu which is hidden-->
 <div id="hidden" class="menu"   >
-    <section class="hero" id="hero1">
+    <section class="hero1" id="hero1">
         <div class="custom-container">
             <div class="container-1-one">
                 <div class="white-color headerlogo" >
@@ -148,7 +148,7 @@
 <!--the section which is hidden -->
 
 <div id="showen">
-    <section class="hero" id="hero">
+    <section class="hero" id="hero2">
         <div class="container-hero">
             <div class=" header-container">
                 <div class=" white-color headerlogo" >
@@ -160,15 +160,15 @@
 
                 <div class="txt-area">
                     <p class="larger-text">
-                        LiteCure is about ideas. <br>
-                        Here's where they come from.
+                        "This would be a really <br> profound quote from the <br> person who is featured in <br>
+                        the bio - highlighted like this."
                     </p>
 
                 </div>
             </div>
         </div>
     </section>
-    <!--the menu start -->
+    <!--the menu -->
     <section class="menudiv ">
         <div class="custom-container">
             <div class="custom-row">
@@ -178,159 +178,49 @@
             </div>
         </div>
     </section>
-    <!-- the menu end-->
-    <!-- customer support team -->
-    <section class="customer-support-one article-area">
-        <div class="customer-support">
-            <div class=" back-to-previous" >
-                <p><i class="fa fa-chevron-left mr-4 "></i><strong>BACK TO PREVIOUS</strong></p>
-            </div>
-            <div class="top-content">
-                <h1>Product Team</h1>
-                <p>Department</p>
-            </div>
-            <div class="hoverd-images">
-                <div class="row-area">
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png"  alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
+    <!-- the menu-->
+    <!--the next brown -->
+    <section class="article-area">
+        <div class="article-container">
+            <div class="container1">
 
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
+                <div class=" back-to-previous" >
+                    <p><i class="fa fa-chevron-left mr-4 "></i><strong>BACK TO PREVIOUS</strong></p>
                 </div>
-                <div class="row-area">
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row-area">
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row-area">
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- qoutation   section  -->
 
-    <section class="qoutation">
-        <div class="qoutation-inside">
-            <div class="qoutation-inside-qoute">
-                <p>
-                    "I never really liked that dog. He was grouchy and tired all the time. Never wanted to go for a walk. Bit me on the finger
-                     when I tried to give him treats. Turns out he just needed the CAH laser therapy."
-                </p>
+
+                <div class="list-container">
+                    <div class="share"><a href="#">[ FACEBOOK ]</a></div>
+                    <div class="list-area">
+                        <a>[ LINKEDIN ]</a>
+                    </div>
+                </div>
+                <div class="webinar">
+                    <div class=" txts">
+                        <p>Kevin Finch &nbsp; |&nbsp;  Title Here</p>
+                        <span>Discriptive text and meta box appear here.</span>
+                    </div>
+
+
+                </div><br><br>
+
+
+                <div class="container2">
+                    <div class="paragraph-area">
+                        <p>A Large Pad of Notes: Yes. Just like in the movies. Carry a large bundle of notes with you and keep them in plain sight. You do not have to really take with you that much. Instead, take a few notes and place them at the top and at the bottom of real note-size paper cuttings. Just remember to never expose this while you are in the casino. Use other notes you’re your wallet instead. But do it nonchalantly so that none of the casino personnel will notice. Always Flash Your Notes Around: No matter where you go, whether its to the hotel restaurant for lunch or for to the bar. They will be watching. From time to time, use that money to play at a range of table games or video game and bet some of that money. Remember you must use some of your money to play but just do not use all of it. 4) Play Complicated Games:</p>
+                    </div>
+                </div>
+
+
             </div>
-            <div class="qoutation-owner">
-                <p>Rob Monroe, Pet Therapist <span>from Facebook 03.27.18</span>
-                </p>
-            </div>
+
         </div>
     </section>
     <!--subscribe section start-->
     <section class="subscribe-container ">
         <div class="main">
-            <div class="subscribing-area">
-                <div class="sub">
+            <div class="extra-clr">
+                <div class="less-margin">
                     <div class=" Subscribe">
                         <p>Subscribe</p>
                     </div>
@@ -358,7 +248,7 @@
 
     <!--footer overall start-->
     <section class="footer-container">
-        <div class="foot-area">
+        <div class="foot-area extra-clr">
             <div class="footer-area">
                 <div class="list1">
                     <div class="redcolor">
@@ -436,16 +326,9 @@
 </div>
 
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/tether.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/tether.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
