--- a/boardbio.html
+++ b/boardbio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <title>Team Bio</title>
+    <title>Board Bios</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -148,7 +148,7 @@
 <!--the section which is hidden -->
 
 <div id="showen">
-    <section class="hero" id="hero">
+    <section class="hero" id="hero1">
         <div class="container-hero">
             <div class=" header-container">
                 <div class=" white-color headerlogo" >
@@ -160,8 +160,8 @@
 
                 <div class="txt-area">
                     <p class="larger-text">
-                        LiteCure is about ideas. <br>
-                        Here's where they come from.
+                        Inspiration. <br>
+                        Insight. Intelligence.
                     </p>
 
                 </div>
@@ -186,15 +186,15 @@
                 <p><i class="fa fa-chevron-left mr-4 "></i><strong>BACK TO PREVIOUS</strong></p>
             </div>
             <div class="top-content">
-                <h1>Product Team</h1>
-                <p>Department</p>
+                <h1>LiteCure Advisory Board</h1>
+                <p>2018</p>
             </div>
             <div class="hoverd-images">
                 <div class="row-area">
                     <div class="outer-container">
                         <img src="assets/dpimage.png" alt="dp">
                         <div class="hovering-area">
-                            <p>Liam Eliestou</p>
+                            <p>Brody Masterson-Elegantz III</p>
                             <hr>
                             <p class="second-paragraph">Title Goes Here</p>
                             <p><i class="fa fa-chevron-right"></i></p>
@@ -203,7 +203,7 @@
                     <div class="outer-container">
                         <img src="assets/dpimage.png" alt="dp">
                         <div class="hovering-area">
-                            <p>Liam Eliestou</p>
+                            <p>Brody Masterson-Elegantz III</p>
                             <hr>
                             <p class="second-paragraph">Title Goes Here</p>
                             <p><i class="fa fa-chevron-right"></i></p>
@@ -212,7 +212,7 @@
                     <div class="outer-container">
                         <img src="assets/dpimage.png"  alt="dp">
                         <div class="hovering-area">
-                            <p>Liam Eliestou</p>
+                            <p>Brody Masterson-Elegantz III</p>
                             <hr>
                             <p class="second-paragraph">Title Goes Here</p>
 
@@ -224,7 +224,7 @@
                     <div class="outer-container">
                         <img src="assets/dpimage.png" alt="dp">
                         <div class="hovering-area">
-                            <p>Liam Eliestou</p>
+                            <p>Brody Masterson-Elegantz III</p>
                             <hr>
                             <p class="second-paragraph">Title Goes Here</p>
                             <p><i class="fa fa-chevron-right"></i></p>
@@ -233,7 +233,7 @@
                     <div class="outer-container">
                         <img src="assets/dpimage.png" alt="dp">
                         <div class="hovering-area">
-                            <p>Liam Eliestou</p>
+                            <p>Brody Masterson-Elegantz III</p>
                             <hr>
                             <p class="second-paragraph">Title Goes Here</p>
                             <p><i class="fa fa-chevron-right"></i></p>
@@ -242,36 +242,7 @@
                     <div class="outer-container">
                         <img src="assets/dpimage.png" alt="dp">
                         <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row-area">
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
-                            <hr>
-                            <p class="second-paragraph">Title Goes Here</p>
-                            <p><i class="fa fa-chevron-right"></i></p>
-                        </div>
-                    </div>
-                    <div class="outer-container">
-                        <img src="assets/dpimage.png" alt="dp">
-                        <div class="hovering-area">
-                            <p>Liam Eliestou</p>
+                            <p>Brody Masterson-Elegantz III</p>
                             <hr>
                             <p class="second-paragraph">Title Goes Here</p>
                             <p><i class="fa fa-chevron-right"></i></p>
@@ -282,7 +253,7 @@
                     <div class="outer-container">
                         <img src="assets/dpimage.png" alt="dp">
                         <div class="hovering-area">
-                            <p>Liam Eliestou</p>
+                            <p>Brody Masterson-Elegantz III</p>
                             <hr>
                             <p class="second-paragraph">Title Goes Here</p>
                             <p><i class="fa fa-chevron-right"></i></p>
@@ -291,7 +262,7 @@
                     <div class="outer-container">
                         <img src="assets/dpimage.png" alt="dp">
                         <div class="hovering-area">
-                            <p>Liam Eliestou</p>
+                            <p>Brody Masterson-Elegantz III</p>
                             <hr>
                             <p class="second-paragraph">Title Goes Here</p>
                             <p><i class="fa fa-chevron-right"></i></p>
@@ -300,7 +271,36 @@
                     <div class="outer-container">
                         <img src="assets/dpimage.png" alt="dp">
                         <div class="hovering-area">
-                            <p>Liam Eliestou</p>
+                            <p>Brody Masterson-Elegantz III</p>
+                            <hr>
+                            <p class="second-paragraph">Title Goes Here</p>
+                            <p><i class="fa fa-chevron-right"></i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row-area">
+                    <div class="outer-container">
+                        <img src="assets/dpimage.png" alt="dp">
+                        <div class="hovering-area">
+                            <p>Brody Masterson-Elegantz III</p>
+                            <hr>
+                            <p class="second-paragraph">Title Goes Here</p>
+                            <p><i class="fa fa-chevron-right"></i></p>
+                        </div>
+                    </div>
+                    <div class="outer-container">
+                        <img src="assets/dpimage.png" alt="dp">
+                        <div class="hovering-area">
+                            <p>Brody Masterson-Elegantz III</p>
+                            <hr>
+                            <p class="second-paragraph">Title Goes Here</p>
+                            <p><i class="fa fa-chevron-right"></i></p>
+                        </div>
+                    </div>
+                    <div class="outer-container">
+                        <img src="assets/dpimage.png" alt="dp">
+                        <div class="hovering-area">
+                            <p>Brody Masterson-Elegantz III</p>
                             <hr>
                             <p class="second-paragraph">Title Goes Here</p>
                             <p><i class="fa fa-chevron-right"></i></p>
@@ -316,12 +316,12 @@
         <div class="qoutation-inside">
             <div class="qoutation-inside-qoute">
                 <p>
-                    "I never really liked that dog. He was grouchy and tired all the time. Never wanted to go for a walk. Bit me on the finger
-                     when I tried to give him treats. Turns out he just needed the CAH laser therapy."
+                    "My cat is an alien. She can read my thoughts. <br> I have trained her to harness this power for
+                    <br> myself and am now the millionaire leader of <br> a cat owner's cult. My cat is the CEO and <br> has a solid gold litterbox."
                 </p>
             </div>
             <div class="qoutation-owner">
-                <p>Rob Monroe, Pet Therapist <span>from Facebook 03.27.18</span>
+                <p>Crazy Cat Lady, The Simpsons <span>from Facebook 03.27.18</span>
                 </p>
             </div>
         </div>
