--- a/publicationarchive.html
+++ b/publicationarchive.html
@@ -235,7 +235,7 @@
 
 
 
-<!--the two dives-->
+<!--the three divs section-->
 <section class="the-three-dives">
     <div class="main-area">
         <div class="row">
@@ -260,8 +260,7 @@
             </div>     
         </div>
 </section>
-
-<!-- the two dive section end -->
+<!-- the three divs section end -->
 
 
 
