--- a/storiesarchivepage.html
+++ b/storiesarchivepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <title>Stories Landing Page</title>
+    <title>Stories Archive Page</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -148,7 +148,7 @@
 
 <!--this the main header dog and girl section -->
 <div id="showen">
-    <section class="hero" id="hero">
+    <section class="hero" id="hero1">
         <div class="main-container main-area">
             <div class="container-1">
                 <div class="white-color headerlogo" >
@@ -210,6 +210,10 @@
                     <div class=""><a href="/litecure/blog.html">blog</a></div>
                     <div class=""><a href="/litecure/supportlandingpage.html">support</a></div>
                 </div>
+                <div class="right-side-area-nav">
+                    <p>CATEGORY</p>
+                    <p>Firstname Lastname;Jub Title, w/Petname; his / her [x] yr old Pet Type</p>
+                </div>
             </div>
         </div>
     </section>
@@ -218,9 +222,9 @@
     <!-- The empty red - End -->
 
     <!--the three divs section-->
-    <section class="the-three-dives">
+    <section class="three-dives">
         <div class="main-area">
-            <img src="assets/141888_CTX.png" class="ctx-images1" >
+            <img src="assets/Ctx.png" class="ctx-images1" >
             <div class="row">
                 <div class=" col-4 two-div1" >
                     <div class="container hite-one">
@@ -257,8 +261,10 @@
                         </div>
                         <div class="ctx-text">
                             <p>
-                                The <span>CTX</span> combines <br> advanced features with <br>a redesigned approach <br> to dosing that gives you
-                                <br> an unmatched level of versatility <br> and control over your treatments.
+                                The <span>CLT-9</span> is our smallest <br>
+                                Companion laser; perfect <br> for practiceslooking for a <br>
+                                repid return on their <br>
+                                photobiomodulation investment, <br>along with reliable clinical successes.
                             </p>
                         </div>
                         <div class="learn-more-link">
@@ -275,25 +281,18 @@
     </section>
     <!--ctx-section End-->
     <!--*************************** second slider start   ******************-->
-    <section class="col1">
+    <section class="col5">
         <div class="second-slider">
 
             <div id="myCarousel" class="carousel slide" data-ride="">
-                <!-- Indicators -->
-                <ol class="carousel-indicators extra-style-cls">
-                    <li data-target="#myCarousel" data-slide-to="0" class=""></li>
-                    <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-                    <li data-target="#myCarousel" data-slide-to="3" class=""></li>
-                    <li data-target="#myCarousel" data-slide-to="4" class=""></li>
-                </ol>
+
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -327,7 +326,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -352,7 +351,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -377,7 +376,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -402,7 +401,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -436,25 +435,18 @@
         </div>
     </section>
     <section class="empty-area"></section>
-    <section class="col2">
+    <section class="col5">
         <div class="second-slider">
 
-            <div id="myCarousel1" class="carousel slide" data-ride="">
-                <!-- Indicators -->
-                <ol class="carousel-indicators extra-style-cls">
-                    <li data-target="#myCarousel1" data-slide-to="0" class=""></li>
-                    <li data-target="#myCarousel1" data-slide-to="1" class="active"></li>
-                    <li data-target="#myCarousel1" data-slide-to="2" class=""></li>
-                    <li data-target="#myCarousel1" data-slide-to="3" class=""></li>
-                    <li data-target="#myCarousel1" data-slide-to="4" class=""></li>
-                </ol>
+            <div id="myCarousell" class="carousel slide" data-ride="">
+
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Clinical Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -488,7 +480,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -513,7 +505,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -538,7 +530,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -563,7 +555,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -588,7 +580,7 @@
 
                 <!-- Left and right controls -->
 
-                <a class="right " href="#myCarousel1" data-slide="next">
+                <a class="right " href="#myCarousell" data-slide="next">
                     <div class="slidericon">
                         <img src="assets/slider-right-arrow.png" alt="">
                     </div>
@@ -597,25 +589,18 @@
         </div>
     </section>
     <section class="empty-area"></section>
-    <section class="col3">
+    <section class="col5">
         <div class="second-slider">
 
-            <div id="myCarousel11" class="carousel slide" data-ride="">
-                <!-- Indicators -->
-                <ol class="carousel-indicators extra-style-cls">
-                    <li data-target="#myCarousel11" data-slide-to="0" class=""></li>
-                    <li data-target="#myCarousel11" data-slide-to="1" class="active"></li>
-                    <li data-target="#myCarousel11" data-slide-to="2" class=""></li>
-                    <li data-target="#myCarouse111" data-slide-to="3" class=""></li>
-                    <li data-target="#myCarousel11" data-slide-to="4" class=""></li>
-                </ol>
+            <div id="myCarouselll" class="carousel slide" data-ride="">
+
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -649,7 +634,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -674,7 +659,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -699,7 +684,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -724,7 +709,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -749,7 +734,7 @@
 
                 <!-- Left and right controls -->
 
-                <a class="right " href="#myCarousel11" data-slide="next">
+                <a class="right " href="#myCarouselll" data-slide="next">
                     <div class="slidericon">
                         <img src="assets/slider-right-arrow.png" alt="">
                     </div>
@@ -758,25 +743,16 @@
         </div>
     </section>
     <section class="empty-area"></section>
-    <section class="col4">
+    <section class="col5">
         <div class="second-slider">
-
-            <div id="myCarousel111l" class="carousel slide" data-ride="">
-                <!-- Indicators -->
-                <ol class="carousel-indicators extra-style-cls">
-                    <li data-target="#myCarousell111" data-slide-to="0" class=""></li>
-                    <li data-target="#myCarousell111" data-slide-to="1" class="active"></li>
-                    <li data-target="#myCarousel1l11" data-slide-to="2" class=""></li>
-                    <li data-target="#myCarousel11l1" data-slide-to="3" class=""></li>
-                    <li data-target="#myCarousel111l" data-slide-to="4" class=""></li>
-                </ol>
+            <div id="myCarousellll" class="carousel slide" data-ride="">
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Clinical Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -810,7 +786,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -835,7 +811,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -860,7 +836,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -885,7 +861,7 @@
                         <div class="row  pt-5 pb-6">
                             <div class="col-7 redslider">
                                 <div class="dog-slider ">
-                                    <p>Featured Customer Story</p>
+                                    <p>Category Story</p>
                                 </div>
 
                                 <div class="four">
@@ -910,7 +886,7 @@
 
                 <!-- Left and right controls -->
 
-                <a class="right " href="#myCarousel111l" data-slide="next">
+                <a class="right " href="#myCarousellll" data-slide="next">
                     <div class="slidericon">
                         <img src="assets/slider-right-arrow.png" alt="">
                     </div>
